breadcrumbs accueil, creyda, barber

--- a/accueil/index.html
+++ b/accueil/index.html
@@ -9,12 +9,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Rajdhani&display=swap" rel="stylesheet">
 </head>
-<body class="body-light">
-
+<body class="body-light" id="home-page">
     <div class="border-container border-light">
-        <header class="header-light">
-            <div class="left-section">Available for freelance work</div>
-            <div class="right-section right-light"><a href="mailto:">isaure.lohest@gmail.com</a></div>
+        <header>
+            <div class="header header-light">
+                <div class="left-section">Available for freelance work</div>
+                <div class="right-section right-light"><a href="mailto:">isaure.lohest@gmail.com</a></div>
+            </div>
+            <nav aria-label="breadcrumb">
+                <ul class="breadcrumb">
+                  <li class="breadcrumb-item active-page"><a href="/">Home</a></li>
+                  <li class="breadcrumb-item" id="work"></li>
+                </ul>
+            </nav>    
         </header>
         <main>
             <div class="intro">
@@ -31,7 +38,7 @@
                 <div class="card card-light">
                     <div class="image-container">
                         <video src="ressources/video-barbier.mp4" class="image-projet" autoplay loop muted></video>
-                        <a href="#" class="button button-light ">Link</a>
+                        <a href="..\projet-barber\projet-barber.html" class="button button-light ">Link</a>
                     </div>
                     <div class="project-info">
                         <span>John Scissors</span>
@@ -51,7 +58,7 @@
                 <div class="card card-light">
                     <div class="image-container">
                         <video src="ressources/video-creyda-short.mp4" class="image-projet" autoplay loop muted></video>
-                        <a href="#" class="button button-light ">Link</a>
+                        <a href="..\projet-creyda\projet-creyda.html" class="button button-light ">Link</a>
                     </div>
                     <div class="project-info">
                         <span>Creyda Yoga</span>
