--- a/projet-creyda/projet-creyda.html
+++ b/projet-creyda/projet-creyda.html
@@ -10,12 +10,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Rajdhani&display=swap" rel="stylesheet">
 
 </head>
-<body class="body-light">
+<body class="body-light" id="creyda-project-page">
 
     <div class="border-container border-light">
-        <header class="header-light">
-            <div class="left-section">Available for freelance work</div>
-            <div class="right-section right-light"><a href="mailto:">isaure.lohest@gmail.com</a></div>
+        <header>
+            <div class="header header-light">
+                <div class="left-section">Available for freelance work</div>
+                <div class="right-section right-light"><a href="mailto:">isaure.lohest@gmail.com</a></div>
+            </div>
+            <nav aria-label="breadcrumb">
+                <ul class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="..\accueil\index.html">Home</a></li>
+                  <li class="breadcrumb-item active-page" id="work"></li>
+                </ul>
+            </nav>    
         </header>
         <main>
             <h1>WORK</h1>
