nouvelle page projet gradient + nouvelle méthode dark mode

--- a/accueil/index.html
+++ b/accueil/index.html
@@ -48,10 +48,10 @@
                 <div class="card card-light">
                     <div class="image-container">
                         <video src="ressources/video-gradient.mp4" class="image-projet" autoplay loop muted></video>
-                        <a href="#" class="button button-light ">Link</a>
+                        <a href="..\projet-gradient\projet-gradient.html" class="button button-light ">Link</a>
                     </div>
                     <div class="project-info">
-                        <span>Gradient generator</span>
+                        <span>Fun gradient generator</span>
                         <span>2023</span>
                     </div>
                 </div>
