MAJ nouvelle méthode mode jour/nuit + restructuration liens

--- a/projet-barber/projet-barber.html
+++ b/projet-barber/projet-barber.html
@@ -20,13 +20,14 @@
             </div>
             <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="..\accueil\index.html">Home</a></li>
+                  <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
                   <li class="breadcrumb-item active-page" id="work"></li>
                 </ul>
             </nav>    
         </header>
         <main>
             <h1>WORK</h1>
+            <h2>John Scissors</h2>
             <div class="project-info">A website of a traditional barber. Know-how and expertise at customer service.</div>
             <div class="project-container">
                 <div class="project-resp">
@@ -40,31 +41,31 @@
             </div>
             <div class="cards-container">
                 <div class="project-card project-card-video">
-                    <video src="ressources/video-barbier.mp4" class="video-projet" autoplay loop muted></video>
+                    <video src="../ressources/video-barbier.mp4" class="video-projet" autoplay loop muted></video>
                 </div>
                 <div class="project-card project-card-desktop">
                     <div class="image-container">
-                        <img src="ressources/desktop1.png" alt="photo 1 projet creyda-yoga vue desktop">
+                        <img src="../ressources/barber-desktop1.png" alt="photo 1 creyda-yoga project - desktop vue">
                     </div>
                     <div class="image-container">
-                        <img src="ressources/desktop2.png" alt="photo 2 projet creyda-yoga vue desktop">
+                        <img src="../ressources/barber-desktop2.png" alt="photo 2 creyda-yoga project - desktop vue">
                     </div>
                 </div>
                 <p class="responsive">The website is completely adaptable, providing an impressive display on mobile devices as well.</p>
                 <div class="project-card carte">
                     <div class="image12">
-                        <div class="photo"><img src="ressources/phone1.png" alt="Première image"></div>
-                        <div class="photo"><img src="ressources/phone2.png" alt="Deuxième image"></div>
+                        <div class="photo"><img src="../ressources/barber-phone1.png" alt="photo 1 creyda-yoga project - small device vue"></div>
+                        <div class="photo"><img src="../ressources/barber-phone2.png" alt="photo 2 creyda-yoga project - small device vue"></div>
                     </div>
                     <div class="image34">
-                        <div class="photo"><img src="ressources/phone3.png" alt="Troisième image"></div>
-                        <div class="photo"><img src="ressources/phone4.png" alt="Quatrième image"></div>
+                        <div class="photo"><img src="../ressources/barber-phone3.png" alt="photo 3 creyda-yoga project - small device vue"></div>
+                        <div class="photo"><img src="../ressources/barber-phone4.png" alt="photo 4 creyda-yoga project - small device vue"></div>
                     </div>
                 </div>
                 <p class="responsive">Web developement.</p>
                 <div class="project-card project-card-dev">
                     <div class="image-container-dev">
-                        <img src="ressources/web-dev.png" alt="photo web developement">
+                        <img src="../ressources/barber-web-dev.png" alt="photo web developement">
                     </div>
                 </div>
                 <div class="check"><a href=# class="button button-light ">Check it out</a></div>
@@ -75,7 +76,7 @@
             </div>
         </main>
         <footer>
-            <img src="ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
+            <img src="../ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
             <div class="slider-container">
                 <div class="slider slider-light">
                     <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
