--- a/projet-creyda/projet-creyda.html
+++ b/projet-creyda/projet-creyda.html
@@ -16,17 +16,18 @@
         <header>
             <div class="header header-light">
                 <div class="left-section">Available for freelance work</div>
-                <div class="right-section right-light"><a href="mailto:">isaure.lohest@gmail.com</a></div>
+                <div class="right-section right-light"><a href="mailto:isaure.lohest@gmail.com">isaure.lohest@gmail.com</a></div>
             </div>
             <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="..\accueil\index.html">Home</a></li>
+                  <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
                   <li class="breadcrumb-item active-page" id="work"></li>
                 </ul>
             </nav>    
         </header>
         <main>
             <h1>WORK</h1>
+            <h2>Creyda yoga</h2>
             <div class="project-info">A yoga website built in Wordpress for CREYDA Yoga, a yoga and welness center managed by passionate people.</div>
             <div class="project-container">
                 <div class="project-resp">
@@ -40,36 +41,36 @@
             </div>
             <div class="cards-container">
                 <div class="project-card project-card-video">
-                    <video src="ressources/video-creyda-short.mp4" class="video-projet" autoplay loop muted></video>
+                    <video src="../ressources/video-creyda-short.mp4" class="video-projet" autoplay loop muted></video>
                 </div>
                 <div class="project-card project-card-desktop">
                     <div class="image-container">
-                        <img src="ressources/desktop1.png" alt="photo 1 projet creyda-yoga vue desktop">
+                        <img src="../ressources/creyda-desktop1.png" alt="photo 1 projet creyda-yoga vue desktop">
                     </div>
                     <div class="image-container">
-                        <img src="ressources/desktop2.png" alt="photo 2 projet creyda-yoga vue desktop">
+                        <img src="../ressources/creyda-desktop2.png" alt="photo 2 projet creyda-yoga vue desktop">
                     </div>
                 </div>
                 <p class="responsive">The website is fully responsive and looks really great on mobile too.</p>
                 <div class="project-card carte">
                     <div class="line">
                         <div class="image12">
-                            <div class="photo"><img src="ressources/phone1.png" alt="Première image"></div>
-                            <div class="photo"><img src="ressources/phone2.png" alt="Deuxième image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone1.png" alt="Première image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone2.png" alt="Deuxième image"></div>
                         </div> 
                         <div class="image34">   
-                            <div class="photo"><img src="ressources/phone3.png" alt="Troisième image"></div>
-                            <div class="photo"><img src="ressources/phone4.png" alt="Quatrième image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone3.png" alt="Troisième image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone4.png" alt="Quatrième image"></div>
                         </div>
                     </div>
                     <div class="line">
                         <div class="image12">
-                            <div class="photo"><img src="ressources/phone5.png" alt="Cinquième image"></div>
-                            <div class="photo"><img src="ressources/phone6.png" alt="Sixième image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone5.png" alt="Cinquième image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone6.png" alt="Sixième image"></div>
                         </div>
                         <div class="image34">
-                            <div class="photo"><img src="ressources/phone7.png" alt="Septième image"></div>
-                            <div class="photo"><img src="ressources/phone8.png" alt="Huitième image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone7.png" alt="Septième image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone8.png" alt="Huitième image"></div>
                         </div>
                     </div>
                     <!-- <div class="line">
@@ -96,7 +97,7 @@
             </div>
         </main>
         <footer>
-            <img src="ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
+            <img src="../ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
             <div class="slider-container">
                 <div class="slider slider-light">
                     <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
