--- a/projet-gradient/projet-gradient.html
+++ b/projet-gradient/projet-gradient.html
@@ -20,13 +20,14 @@
             </div>
             <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="..\accueil\index.html">Home</a></li>
+                  <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
                   <li class="breadcrumb-item active-page" id="work"></li>
                 </ul>
             </nav>    
         </header>
         <main>
             <h1>WORK</h1>
+            <h2>Fun gradient generator</h2>
             <div class="project-info">A web application that enables the creation of a wide variety of gradients, providing users with the ability to obtain the associated CSS code.</div>
             <div class="project-container">
                 <div class="project-resp">
@@ -40,24 +41,24 @@
             </div>
             <div class="cards-container">
                 <div class="project-card project-card-video">
-                    <video src="ressources/video-gradient.mp4" class="video-projet" autoplay loop muted></video>
+                    <video src="../ressources/video-gradient.mp4" class="video-projet" autoplay loop muted></video>
                 </div>
                 <p class="responsive">The application allows for both color picking and manual input of color codes.</p>
                 <div class="project-card project-card-desktop">
                     <div class="image-container">
-                        <img src="ressources/desktop1.png" alt="photo 1 projet creyda-yoga vue desktop">
+                        <img src="../ressources/gradient-desktop1.png" alt="photo 1 fun gradient generator project - desktop vue">
                     </div>
                     <div class="image-container">
-                        <img src="ressources/desktop2.png" alt="photo 2 projet creyda-yoga vue desktop">
+                        <img src="../ressources/gradient-desktop2.png" alt="photo 2 fun gradient generator project - desktop vue">
                     </div>
                 </div>
                 <p class="responsive">The user can choose the type of gradient (linear/radial) and adjust various parameters such as tilt, radius, background repetition, size, shuffle color picking, etc.</p>
                 <div class="project-card project-card-desktop">
                     <div class="image-container">
-                        <img src="ressources/desktop3.png" alt="photo 3 projet creyda-yoga vue desktop">
+                        <img src="../ressources/gradient-desktop3.png" alt="photo 3 fun gradient generator project - desktop vue">
                     </div>
                     <div class="image-container">
-                        <img src="ressources/desktop4.png" alt="photo 4 projet creyda-yoga vue desktop">
+                        <img src="../ressources/gradient-desktop4.png" alt="photo 4 fun gradient generator project - desktop vue">
                     </div>
                 </div>
                 
@@ -69,7 +70,7 @@
             </div>
         </main>
         <footer>
-            <img src="ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
+            <img src="../ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
             <div class="slider-container">
                 <div class="slider slider-light">
                     <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
