--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Rajdhani&display=swap" rel="stylesheet">
+    <link rel="icon" href="ressources/favicon-isaure.png" type="image/png">
+    <title>Isaure Lohest : web developement</title>
+
 </head>
 <body class="body-light" id="home-page">
     <div class="border-container border-light">
@@ -38,7 +41,7 @@
                 <div class="card card-light">
                     <div class="image-container">
                         <video src="ressources/video-barbier.mp4" class="image-projet" autoplay loop muted></video>
-                        <a href="..\projet-barber\projet-barber.html" class="button button-light ">Link</a>
+                        <a href="John-Scissors-project/john-scissors-project.html" class="button button-light ">Link</a>
                     </div>
                     <div class="project-info">
                         <span>John Scissors</span>
@@ -48,17 +51,17 @@
                 <div class="card card-light">
                     <div class="image-container">
                         <video src="ressources/video-gradient.mp4" class="image-projet" autoplay loop muted></video>
-                        <a href="..\projet-gradient\projet-gradient.html" class="button button-light ">Link</a>
+                        <a href="Gradient-generator-project/gradient-generator.html" class="button button-light ">Link</a>
                     </div>
                     <div class="project-info">
-                        <span>Fun gradient generator</span>
+                        <span>Gradient generator</span>
                         <span>2023</span>
                     </div>
                 </div>
                 <div class="card card-light">
                     <div class="image-container">
-                        <video src="ressources/video-creyda-short.mp4" class="image-projet" autoplay loop muted></video>
-                        <a href="..\projet-creyda\projet-creyda.html" class="button button-light ">Link</a>
+                        <video src="ressources/video-creyda-short.mp4" class="image-projet last" autoplay loop muted></video>
+                        <a href="Creyda-project/creyda-project.html" class="button button-light ">Link</a>
                     </div>
                     <div class="project-info">
                         <span>Creyda Yoga</span>
