--- a/John-Scissors-project/john-scissors-project.html
+++ b/John-Scissors-project/john-scissors-project.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Isaure's project - Fun gradient generator</title>
-    <link rel="stylesheet" href="style-gradient.css"/>
+    <title>Isaure's project - John Scissors</title>
+    <link rel="stylesheet" href="style-john-scissors-project.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Rajdhani&display=swap" rel="stylesheet">
+    <link rel="icon" href="../ressources/favicon-isaure.png" type="image/png">
 
 </head>
-<body class="body-light" id="gradient-project-page">
+<body class="body-light" id="barber-project-page">
 
     <div class="border-container border-light">
         <header>
@@ -27,42 +28,48 @@
         </header>
         <main>
             <h1>WORK</h1>
-            <h2>Fun gradient generator</h2>
-            <div class="project-info">A web application that enables the creation of a wide variety of gradients, providing users with the ability to obtain the associated CSS code.</div>
+            <h2>John Scissors</h2>
+            <div class="project-info">A demo website of a traditional barber. Know-how and expertise at customer service.</div>
             <div class="project-container">
                 <div class="project-resp">
                     <h2>Responsibilities</h2>
-                    <p>Conceptualization of application's features and functionalities, User Interface Design, Front-end Implementation, Autonomous Project Development</p>
+                    <p>Web design, Front-end web application Development, Launch</p>
                 </div>
                 <div class="project-url">
                     <h2>URL</h1>
-                    <a href=#>https://fun-gradient-generator/</a>
+                    <a href="john-scissors/index.html" target="_blank">https://isaure-lohest.com/john-scissors-project/john-scissors/index.html</a>
                 </div>
             </div>
             <div class="cards-container">
                 <div class="project-card project-card-video">
-                    <video src="../ressources/video-gradient.mp4" class="video-projet" autoplay loop muted></video>
+                    <video src="../ressources/video-barbier.mp4" class="video-projet" autoplay loop muted></video>
                 </div>
-                <p class="responsive">The application allows for both color picking and manual input of color codes.</p>
                 <div class="project-card project-card-desktop">
                     <div class="image-container">
-                        <img src="../ressources/gradient-desktop1.png" alt="photo 1 fun gradient generator project - desktop vue">
+                        <img src="../ressources/barber-desktop1.png" alt="photo 1 john scissors project - desktop vue">
                     </div>
                     <div class="image-container">
-                        <img src="../ressources/gradient-desktop2.png" alt="photo 2 fun gradient generator project - desktop vue">
+                        <img src="../ressources/barber-desktop2.png" alt="photo 2 john scissors project - desktop vue">
                     </div>
                 </div>
-                <p class="responsive">The user can choose the type of gradient (linear/radial) and adjust various parameters such as tilt, radius, background repetition, size, shuffle color picking, etc.</p>
-                <div class="project-card project-card-desktop">
-                    <div class="image-container">
-                        <img src="../ressources/gradient-desktop3.png" alt="photo 3 fun gradient generator project - desktop vue">
+                <p class="responsive">The website is completely adaptable, providing an impressive display on mobile devices as well.</p>
+                <div class="project-card carte">
+                    <div class="image12">
+                        <div class="photo"><img src="../ressources/barber-phone1.png" alt="photo 1 john scissors project - small device vue"></div>
+                        <div class="photo"><img src="../ressources/barber-phone2.png" alt="photo 2 john scissors project - small device vue"></div>
                     </div>
-                    <div class="image-container">
-                        <img src="../ressources/gradient-desktop4.png" alt="photo 4 fun gradient generator project - desktop vue">
+                    <div class="image34">
+                        <div class="photo"><img src="../ressources/barber-phone3.png" alt="photo 3 john scissors project - small device vue"></div>
+                        <div class="photo"><img src="../ressources/barber-phone4.png" alt="photo 4 john scissors project - small device vue"></div>
                     </div>
                 </div>
-                
-                <div class="check"><a href=# class="button button-light ">Check it out</a></div>
+                <p class="responsive">Web developement.</p>
+                <div class="project-card project-card-dev">
+                    <div class="image-container-dev">
+                        <img src="../ressources/barber-web-dev.png" alt="photo web developement">
+                    </div>
+                </div>
+                <div class="check"><a href="john-scissors/index.html" class="button button-light" target="_blank">Check it out</a></div>
 
             </div>
             <div class="bird-container gauche-droite">
@@ -85,7 +92,7 @@
 
     </div>
 
-    <script src="app-gradient.js"></script>
+    <script src="app-john-scissors-project.js"></script>
 
     
 </body>
