SEO + peteies améliorations

--- a/John-Scissors-project/john-scissors-project.html
+++ b/John-Scissors-project/john-scissors-project.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Rajdhani&display=swap" rel="stylesheet">
     <link rel="icon" href="../ressources/favicon-isaure.png" type="image/png">
+    <meta name="description" content="Isaure's Lohest web developement portfolio : project example. Web design, Front-end web development." />
 
 </head>
 <body class="body-light" id="barber-project-page">
@@ -37,7 +38,7 @@
                 </div>
                 <div class="project-url">
                     <h2>URL</h1>
-                    <a href="john-scissors/index.html" target="_blank">https://isaure-lohest.com/john-scissors-project/john-scissors/index.html</a>
+                    <a href="John-Scissors/index.html" target="_blank">https://isaure-lohest.com/John-Scissors-project/John-Scissors/index.html</a>
                 </div>
             </div>
             <div class="cards-container">
