--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Rajdhani&display=swap" rel="stylesheet">
     <link rel="icon" href="ressources/favicon-isaure.png" type="image/png">
-    <title>Isaure Lohest : web developement</title>
-
+    <meta name="description" content="Isaure's Lohest web developement portfolio. Web design, Front-end web development." />
 </head>
 <body class="body-light" id="home-page">
     <div class="border-container border-light">
@@ -40,7 +39,7 @@
             <div class="work-container">
                 <div class="card card-light">
                     <div class="image-container">
-                        <video src="ressources/video-barbier.mp4" class="image-projet" autoplay loop muted></video>
+                        <video src="ressources/video-barbier.mp4" class="image-projet" autoplay loop muted preload="auto"></video>
                         <a href="John-Scissors-project/john-scissors-project.html" class="button button-light ">Link</a>
                     </div>
                     <div class="project-info">
@@ -50,7 +49,7 @@
                 </div>
                 <div class="card card-light">
                     <div class="image-container">
-                        <video src="ressources/video-gradient.mp4" class="image-projet" autoplay loop muted></video>
+                        <video src="ressources/video-gradient.mp4" class="image-projet" autoplay loop muted preload="auto"></video>
                         <a href="Gradient-generator-project/gradient-generator.html" class="button button-light ">Link</a>
                     </div>
                     <div class="project-info">
@@ -60,7 +59,7 @@
                 </div>
                 <div class="card card-light">
                     <div class="image-container">
-                        <video src="ressources/video-creyda-short.mp4" class="image-projet last" autoplay loop muted></video>
+                        <video src="ressources/video-creyda-short.mp4" class="image-projet last" autoplay loop muted preload="auto"></video>
                         <a href="Creyda-project/creyda-project.html" class="button button-light ">Link</a>
                     </div>
                     <div class="project-info">
