--- a/Creyda-project/creyda-project.html
+++ b/Creyda-project/creyda-project.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Rajdhani&display=swap" rel="stylesheet">
     <link rel="icon" href="../ressources/favicon-isaure.png" type="image/png">
-    
+    <meta name="description" content="Isaure's Lohest web developement portfolio : project example. Web design, Front-end web development." />
+
 </head>
 <body class="body-light" id="creyda-project-page">
 
