image en attendant que la vidéo charge + amélioration rendu final

--- a/Gradient-generator-project/gradient-generator.html
+++ b/Gradient-generator-project/gradient-generator.html
@@ -12,13 +12,13 @@
     <meta name="description" content="Isaure's Lohest web developement portfolio : project example. Web design, Front-end web development." />
 
 </head>
-<body class="body-light" id="gradient-project-page">
+<body id="gradient-project-page">
 
-    <div class="border-container border-light">
+    <div class="border-container">
         <header>
-            <div class="header header-light">
+            <div class="header">
                 <div class="left-section">Available for freelance work</div>
-                <div class="right-section right-light"><a href="mailto:">isaure.lohest@gmail.com</a></div>
+                <div class="right-section"><a href="mailto:">isaure.lohest@gmail.com</a></div>
             </div>
             <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
@@ -28,7 +28,7 @@
             </nav>    
         </header>
         <main>
-            <h1>WORK</h1>
+            <h1>Achievements</h1>
             <h2>Gradient generator</h2>
             <div class="project-info">A web application that enables the creation of a wide variety of gradients, providing users with the ability to obtain the associated CSS code.</div>
             <div class="project-container">
@@ -43,7 +43,8 @@
             </div>
             <div class="cards-container">
                 <div class="project-card project-card-video">
-                    <video src="../ressources/video-gradient.mp4" class="video-projet" autoplay loop muted></video>
+                    <img src="../ressources/gradient-temp.png" class="video-placeholder" alt="Placeholder Image John Scissors project">
+                    <video src="../ressources/video-gradient.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
                 </div>
                 <p class="responsive">The application allows for both color picking and manual input of color codes.</p>
                 <div class="project-card project-card-desktop">
@@ -64,7 +65,7 @@
                     </div>
                 </div>
                 
-                <div class="check"><a href="Gradient-generator/index.html" class="button button-light" target="_blank">Check it out</a></div>
+                <div class="check"><a href="Gradient-generator/index.html" class="button" target="_blank">Check it out</a></div>
 
             </div>
             <div class="bird-container gauche-droite">
@@ -74,7 +75,7 @@
         <footer>
             <img src="../ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
             <div class="slider-container">
-                <div class="slider slider-light">
+                <div class="slider ">
                     <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
                     <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
                 </div>
