--- a/John-Scissors-project/john-scissors-project.html
+++ b/John-Scissors-project/john-scissors-project.html
@@ -12,13 +12,13 @@
     <meta name="description" content="Isaure's Lohest web developement portfolio : project example. Web design, Front-end web development." />
 
 </head>
-<body class="body-light" id="barber-project-page">
+<body id="barber-project-page">
 
-    <div class="border-container border-light">
+    <div class="border-container">
         <header>
-            <div class="header header-light">
+            <div class="header">
                 <div class="left-section">Available for freelance work</div>
-                <div class="right-section right-light"><a href="mailto:">isaure.lohest@gmail.com</a></div>
+                <div class="right-section"><a href="mailto:">isaure.lohest@gmail.com</a></div>
             </div>
             <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
@@ -28,7 +28,7 @@
             </nav>    
         </header>
         <main>
-            <h1>WORK</h1>
+            <h1>Achievements</h1>
             <h2>John Scissors</h2>
             <div class="project-info">A demo website of a traditional barber. Know-how and expertise at customer service.</div>
             <div class="project-container">
@@ -43,7 +43,8 @@
             </div>
             <div class="cards-container">
                 <div class="project-card project-card-video">
-                    <video src="../ressources/video-barbier.mp4" class="video-projet" autoplay loop muted></video>
+                    <img src="../ressources/barber-temp.png" class="video-placeholder" alt="Placeholder Image John Scissors project">
+                    <video src="../ressources/video-barbier.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
                 </div>
                 <div class="project-card project-card-desktop">
                     <div class="image-container">
@@ -70,7 +71,7 @@
                         <img src="../ressources/barber-web-dev.png" alt="photo web developement">
                     </div>
                 </div>
-                <div class="check"><a href="john-scissors/index.html" class="button button-light" target="_blank">Check it out</a></div>
+                <div class="check"><a href="john-scissors/index.html" class="button" target="_blank">Check it out</a></div>
 
             </div>
             <div class="bird-container gauche-droite">
@@ -80,7 +81,7 @@
         <footer>
             <img src="../ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
             <div class="slider-container">
-                <div class="slider slider-light">
+                <div class="slider">
                     <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
                     <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
                 </div>
