--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="icon" href="ressources/favicon-isaure.png" type="image/png">
     <meta name="description" content="Isaure's Lohest web developement portfolio. Web design, Front-end web development." />
 </head>
-<body class="body-light" id="home-page">
-    <div class="border-container border-light">
+<body id="home-page">
+    <div class="border-container">
         <header>
-            <div class="header header-light">
+            <div class="header">
                 <div class="left-section">Available for freelance work</div>
-                <div class="right-section right-light"><a href="mailto:">isaure.lohest@gmail.com</a></div>
+                <div class="right-section"><a href="mailto:">isaure.lohest@gmail.com</a></div>
             </div>
             <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
@@ -33,34 +33,38 @@
             <div class="what-i-do">
                 I create websites that people love. I use my passion and skills to create digital products and experiences.
             </div>
-            <div class="work">
-                Work
-            </div>
+            <div class="work">Achievements</div>
             <div class="work-container">
-                <div class="card card-light">
+                <div class="card">
                     <div class="image-container">
-                        <video src="ressources/video-barbier.mp4" class="image-projet" autoplay loop muted preload="auto"></video>
-                        <a href="John-Scissors-project/john-scissors-project.html" class="button button-light ">Link</a>
+                        <a href="John-Scissors-project/john-scissors-project.html" class="button">
+                            <img src="ressources/barber-temp.png" class="video-placeholder a" alt="Placeholder Image John Scissors project">
+                            <video src="ressources/video-barbier.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
+                        </a>
                     </div>
                     <div class="project-info">
                         <span>John Scissors</span>
                         <span>2023</span>
                     </div>
                 </div>
-                <div class="card card-light">
+                <div class="card">
                     <div class="image-container">
-                        <video src="ressources/video-gradient.mp4" class="image-projet" autoplay loop muted preload="auto"></video>
-                        <a href="Gradient-generator-project/gradient-generator.html" class="button button-light ">Link</a>
+                        <a href="Gradient-generator-project/gradient-generator.html" class="button">
+                            <img src="ressources/gradient-temp.png" class="video-placeholder b" alt="Placeholder Image Gradient generator project">
+                            <video src="ressources/video-gradient.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
+                        </a>
                     </div>
                     <div class="project-info">
                         <span>Gradient generator</span>
                         <span>2023</span>
                     </div>
                 </div>
-                <div class="card card-light">
+                <div class="card">
                     <div class="image-container">
-                        <video src="ressources/video-creyda-short.mp4" class="image-projet last" autoplay loop muted preload="auto"></video>
-                        <a href="Creyda-project/creyda-project.html" class="button button-light ">Link</a>
+                        <a href="Creyda-project/creyda-project.html" class="button">
+                            <img src="ressources/creyda-temp.png" class="video-placeholder c" alt="Placeholder Image Creyda yoga project">
+                            <video src="ressources/video-creyda-short.mp4" class="video-projet last" autoplay loop muted preload="auto"></video>
+                        </a>
                     </div>
                     <div class="project-info">
                         <span>Creyda Yoga</span>
@@ -70,7 +74,7 @@
             </div>
             <div class="contact">
                 <span>Are you minding a project ?</span>
-                <span class="contact-me" data-email="isaure.lohest@gmail.com"><a href="mailto:"></a></span>
+                <span class="contact-me" data-email="isaure.lohest@gmail.com"><a href="mailto:" aria-label="Lien vers l'adresse mail isaure.lohest@gmail.com"></a></span>
             </div>
 
             <div class="bird-container gauche-droite">
@@ -80,7 +84,7 @@
         <footer>
             <img src="ressources/dark.svg" alt="dark / light background button" class="dark-light-button">
             <div class="slider-container">
-                <div class="slider slider-light">
+                <div class="slider">
                     <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
                     <span>Web developement * Frontend developement * Wordpress developement * Creative websites * Startups * New buisnesses * Available for freelance work * Contact me at isaure.lohest@gmail.com * </span>
                 </div>
