button-link rajouté

--- a/John-Scissors-project/john-scissors-project.html
+++ b/John-Scissors-project/john-scissors-project.html
@@ -71,7 +71,7 @@
                         <img src="../ressources/barber-web-dev.png" alt="photo web developement">
                     </div>
                 </div>
-                <div class="check"><a href="john-scissors/index.html" class="button" target="_blank">Check it out</a></div>
+                <div class="check"><a href="John-Scissors/index.html" class="button" target="_blank">Check it out</a></div>
 
             </div>
             <div class="bird-container gauche-droite">
