--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <a href="John-Scissors-project/john-scissors-project.html" class="button">
                             <img src="ressources/barber-temp.png" class="video-placeholder a" alt="Placeholder Image John Scissors project">
                             <video src="ressources/video-barbier.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
+                            <a href="John-Scissors-project/john-scissors-project.html" class="button-link">View more</a>
                         </a>
                     </div>
                     <div class="project-info">
@@ -52,6 +53,7 @@
                         <a href="Gradient-generator-project/gradient-generator.html" class="button">
                             <img src="ressources/gradient-temp.png" class="video-placeholder b" alt="Placeholder Image Gradient generator project">
                             <video src="ressources/video-gradient.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
+                            <a href="Gradient-generator-project/gradient-generator.html" class="button-link">View more</a>
                         </a>
                     </div>
                     <div class="project-info">
@@ -64,6 +66,7 @@
                         <a href="Creyda-project/creyda-project.html" class="button">
                             <img src="ressources/creyda-temp.png" class="video-placeholder c" alt="Placeholder Image Creyda yoga project">
                             <video src="ressources/video-creyda-short.mp4" class="video-projet last" autoplay loop muted preload="auto"></video>
+                            <a href="Creyda-project/creyda-project.html" class="button-link">View more</a>
                         </a>
                     </div>
                     <div class="project-info">
