largeurs dans le css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Rajdhani&display=swap" rel="stylesheet">
     <link rel="icon" href="ressources/favicon-isaure.png" type="image/png">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Isaure's Lohest web developement portfolio. Web design, Front-end web development." />
 </head>
 <body id="home-page">
