travail sur les ressources et responsive

--- a/Creyda-project/creyda-project.html
+++ b/Creyda-project/creyda-project.html
@@ -48,32 +48,32 @@
                 </div>
                 <div class="project-card project-card-desktop">
                     <div class="image-container">
-                        <img src="../ressources/creyda-desktop1.png" alt="photo 1 projet creyda-yoga vue desktop">
+                        <img src="../ressources/creyda-desktop1.png" alt="Isaure Lohest web developement project 3 - desktop vue">
                     </div>
                     <div class="image-container">
-                        <img src="../ressources/creyda-desktop2.png" alt="photo 2 projet creyda-yoga vue desktop">
+                        <img src="../ressources/creyda-desktop2.png" alt="Isaure Lohest web developement project 3 - desktop vue">
                     </div>
                 </div>
                 <p class="responsive">The website is fully responsive and looks really great on mobile too.</p>
                 <div class="project-card carte">
                     <div class="line">
                         <div class="image12">
-                            <div class="photo"><img src="../ressources/creyda-phone1.png" alt="Première image"></div>
-                            <div class="photo"><img src="../ressources/creyda-phone2.png" alt="Deuxième image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone1.png" alt="Isaure Lohest web developement project 3 - mobile vue"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone2.png" alt="Isaure Lohest web developement project 3 - mobile vue"></div>
                         </div> 
                         <div class="image34">   
-                            <div class="photo"><img src="../ressources/creyda-phone3.png" alt="Troisième image"></div>
-                            <div class="photo"><img src="../ressources/creyda-phone4.png" alt="Quatrième image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone3.png" alt="Isaure Lohest web developement project 3 - mobile vue"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone4.png" alt="Isaure Lohest web developement project 3 - mobile vue"></div>
                         </div>
                     </div>
                     <div class="line">
                         <div class="image12">
-                            <div class="photo"><img src="../ressources/creyda-phone5.png" alt="Cinquième image"></div>
-                            <div class="photo"><img src="../ressources/creyda-phone6.png" alt="Sixième image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone5.png" alt="Isaure Lohest web developement project 3 - mobile vue"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone6.png" alt="Isaure Lohest web developement project 3 - mobile vue"></div>
                         </div>
                         <div class="image34">
-                            <div class="photo"><img src="../ressources/creyda-phone7.png" alt="Septième image"></div>
-                            <div class="photo"><img src="../ressources/creyda-phone8.png" alt="Huitième image"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone7.png" alt="Isaure Lohest web developement project 3 - mobile vue"></div>
+                            <div class="photo"><img src="../ressources/creyda-phone8.png" alt="Isaure Lohest web developement project 3 - mobile vue"></div>
                         </div>
                     </div>
                 </div>
