--- a/Gradient-generator-project/gradient-generator.html
+++ b/Gradient-generator-project/gradient-generator.html
@@ -49,19 +49,19 @@
                 <p class="responsive">The application allows for both color picking and manual input of color codes.</p>
                 <div class="project-card project-card-desktop">
                     <div class="image-container">
-                        <img src="../ressources/gradient-desktop1.png" alt="photo 1 fun gradient generator project - desktop vue">
+                        <img src="../ressources/gradient-desktop1.png" alt="Isaure Lohest web developement project 2 - color picker">
                     </div>
                     <div class="image-container">
-                        <img src="../ressources/gradient-desktop2.png" alt="photo 2 fun gradient generator project - desktop vue">
+                        <img src="../ressources/gradient-desktop2.png" alt="Isaure Lohest web developement project 2 - manual input of color code">
                     </div>
                 </div>
                 <p class="responsive">The user can choose the type of gradient (linear/radial) and adjust various parameters such as tilt, radius, background repetition, size, shuffle color picking, etc.</p>
                 <div class="project-card project-card-desktop">
                     <div class="image-container">
-                        <img src="../ressources/gradient-desktop3.png" alt="photo 3 fun gradient generator project - desktop vue">
+                        <img src="../ressources/gradient-desktop3.png" alt="Isaure Lohest web developement project 2 - linear gradient">
                     </div>
                     <div class="image-container">
-                        <img src="../ressources/gradient-desktop4.png" alt="photo 4 fun gradient generator project - desktop vue">
+                        <img src="../ressources/gradient-desktop4.png" alt="Isaure Lohest web developement project 2 - radial gradient">
                     </div>
                 </div>
                 
