--- a/John-Scissors-project/john-scissors-project.html
+++ b/John-Scissors-project/john-scissors-project.html
@@ -42,33 +42,34 @@
                 </div>
             </div>
             <div class="cards-container">
+                <p class="responsive">Desktop vue of the website.</p>
                 <div class="project-card project-card-video">
                     <img src="../ressources/barber-temp.png" class="video-placeholder" alt="Placeholder Image John Scissors project">
                     <video src="../ressources/video-barbier.mp4" class="video-projet" autoplay loop muted preload="auto"></video>
                 </div>
                 <div class="project-card project-card-desktop">
                     <div class="image-container">
-                        <img src="../ressources/barber-desktop1.png" alt="photo 1 john scissors project - desktop vue">
+                        <img src="../ressources/barber-desktop1.png" alt="Isaure Lohest web developement project 1 - desktop vue">
                     </div>
                     <div class="image-container">
-                        <img src="../ressources/barber-desktop2.png" alt="photo 2 john scissors project - desktop vue">
+                        <img src="../ressources/barber-desktop2.png" alt="Isaure Lohest web developement project 1 - desktop vue">
                     </div>
                 </div>
                 <p class="responsive">The website is completely adaptable, providing an impressive display on mobile devices as well.</p>
                 <div class="project-card carte">
                     <div class="image12">
-                        <div class="photo"><img src="../ressources/barber-phone1.png" alt="photo 1 john scissors project - small device vue"></div>
-                        <div class="photo"><img src="../ressources/barber-phone2.png" alt="photo 2 john scissors project - small device vue"></div>
+                        <div class="photo"><img src="../ressources/barber-phone1.png" alt="Isaure Lohest web developement project 1 - mobile vue"></div>
+                        <div class="photo"><img src="../ressources/barber-phone2.png" alt="Isaure Lohest web developement project 1 - mobile vue"></div>
                     </div>
                     <div class="image34">
-                        <div class="photo"><img src="../ressources/barber-phone3.png" alt="photo 3 john scissors project - small device vue"></div>
-                        <div class="photo"><img src="../ressources/barber-phone4.png" alt="photo 4 john scissors project - small device vue"></div>
+                        <div class="photo"><img src="../ressources/barber-phone3.png" alt="Isaure Lohest web developement project 1 - mobile vue"></div>
+                        <div class="photo"><img src="../ressources/barber-phone4.png" alt="Isaure Lohest web developement project 1 - mobile vue"></div>
                     </div>
                 </div>
                 <p class="responsive">Web developement.</p>
                 <div class="project-card project-card-dev">
                     <div class="image-container-dev">
-                        <img src="../ressources/barber-web-dev.png" alt="photo web developement">
+                        <img src="../ressources/barber-web-dev.png" alt="Isaure Lohest web developement project 1 - screen of the code editor">
                     </div>
                 </div>
                 <div class="check"><a href="John-Scissors/index.html" class="button" target="_blank">Check it out</a></div>
